# iris

./: .env.example  .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml  docs-sync.yml
ai/: OWNERS.md  pytest.ini
ai/prompts/: edit_plan.txt  entity_identify.txt  entity_search.txt  narration.txt  quality_score.txt
ai/services/: __init__.py  _stubs.py  clip_search.py  config.py  elevenlabs.py  entity_tracker.py  ffmpeg.py  gemini.py  health.py  sam.py  (+3 more)
backend/: Dockerfile  OWNERS.md  requirements.txt
cli/: SKILL.md  pyproject.toml
cli/iris_cli/: client.py  config.py  main.py  output.py  parsers.py  poll.py
cli/iris_cli/analysis/: chunk_agent.py  extractor.py  runner.py  synthesizer.py
cli/iris_cli/commands/: accept.py  analyze.py  auth.py  batch.py  entities.py  export.py  generate.py  grade.py  identify.py  jobs.py  mask.py  narrate.py  preview.py  projects.py  propagate.py  remix.py  score.py  snapshot.py  split.py  timeline.py  trim.py  upload.py
cli/tasks/: todo.md
cli/tests/: test_client.py  test_commands.py  test_config.py  test_output.py  test_parsers.py  test_poll.py
docs/: custom.css  docs.json  index.mdx  quickstart.mdx  style.css
frontend/: OWNERS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gpu-worker/: main.py  modal_worker.py  requirements.txt
infra/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.gpu  deploy.sh  docker-compose.yml  nginx-admin.conf  nginx.conf
scripts/: clean_scratch.py  dev_backend.sh  smoke.sh  spike_gemini.py  spike_veo.py  spike_veo_image.py
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
tasks/: lessons.md  todo.md
(+173 files in other folders)
