[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iris-edit"
version = "0.1.0"
description = "CLI for the iris AI video editor — prompt-driven video editing from the terminal"
requires-python = ">=3.11"
readme = "SKILL.md"
license = "MIT"
authors = [
  { name = "Stephen Hung", email = "stephenhung@berkeley.edu" },
]
keywords = ["video", "editing", "ai", "gemini", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Multimedia :: Video",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "typer>=0.9",
  "httpx>=0.28",
  "rich>=13",
  "google-genai>=1.73",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://useiris.tech"
Documentation = "https://docs.useiris.tech"
Repository = "https://github.com/stephenhungg/iris"

[project.scripts]
iris = "iris_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["iris_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
